<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context="com.example.MainActivity">

    <Button
        android:id="@+id/StartUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="1dp"
        android:translationZ="1dp"
        android:onClick="StartAsUser"
        android:text="@string/StartUser"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/StartRobot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/StartUser"
        android:layout_centerHorizontal="true"
        android:elevation="1dp"
        android:translationZ="1dp"
        android:onClick="StartAsRobot"
        android:text="@string/StartRobot"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/LeftUpArrow"
        android:layout_width="60dp"
        android:layout_height="66dp"
        android:layout_above="@+id/LeftLeftArrow"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/LeftUpArrow"
        android:elevation="4dp"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/LeftLeftArrow"
        android:layout_width="66dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/LeftLeftArrow"
        android:elevation="4dp"
        android:rotation="-90"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/LeftDownArrow"
        android:layout_width="60dp"
        android:layout_height="66dp"
        android:layout_below="@+id/LeftLeftArrow"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/LeftDownArrow"
        android:elevation="4dp"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/RightUpArrow"
        android:layout_width="60dp"
        android:layout_height="66dp"
        android:layout_above="@+id/RightRightArrow"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/RightUpArrow"
        android:elevation="4dp"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/RightRightArrow"
        android:layout_width="66dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/RightRightArrow"
        android:elevation="4dp"
        android:rotation="90"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/RightDownArrow"
        android:layout_width="60dp"
        android:layout_height="66dp"
        android:layout_below="@+id/RightRightArrow"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/RightDownArrow"
        android:elevation="4dp"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/RightRightArrow"
        android:layout_toEndOf="@+id/LeftLeftArrow"
        android:background="#FFFFFFFF"
        android:elevation="12dp"
        android:text="@string/DebugTextView"
        android:textAlignment="center"
        android:textSize="36sp"
        android:translationZ="12dp"
        android:visibility="visible"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/videoFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignStart="@+id/LeftLeftArrow"
        android:layout_alignEnd="@id/RightRightArrow"
        android:layout_centerInParent="true"
        android:elevation="2dp">

    </FrameLayout>

</RelativeLayout>
